--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
-        <meta name="viewport" content=" user-scalable=no, width=device-width, initial-scale=1" />
+        <meta name="viewport" content=" user-scalable=no, initial-scale=5" />
         <link rel="stylesheet" type="text/css" href="style.css" />
         <title>Miato App</title>
     </head>
